@@ -1,6 +1,7 @@
 package org.jrd.backend.decompiling;
 
 import java.io.*;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 public class JavapDisassemblerWrapper {
@@ -15,7 +16,7 @@ public class JavapDisassemblerWrapper {
         try {
             File tempByteFile = bytesToFile(bytecode);
             File tempOutputFile = File.createTempFile("decompile-output", ".java");
-            PrintWriter printWriter = new PrintWriter(tempOutputFile);
+            PrintWriter printWriter = new PrintWriter(tempOutputFile, StandardCharsets.UTF_8);
             StringBuilder OptionsString = new StringBuilder();
             if (options != null){
                 for (String option: options){
@@ -34,13 +35,15 @@ public class JavapDisassemblerWrapper {
     private File bytesToFile(byte[] bytes) throws IOException {
         File tempFile = File.createTempFile("temporary-byte-file", ".class");
         tempFile.deleteOnExit();
-        FileOutputStream fos = new FileOutputStream(tempFile.getCanonicalPath());
-        fos.write(bytes);
-        fos.close();
+
+        try (FileOutputStream fos = new FileOutputStream(tempFile.getCanonicalPath())) {
+            fos.write(bytes);
+        }
+
         return tempFile;
     }
 
     private String readStringFromFile(String filePath) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(filePath)));
+        return Files.readString(Paths.get(filePath));
     }
 }
